bdr.BDR.scala.error
Erreur de compilation :
BDR:9: error: reassignment to val
                 else {estSurMessage=false()}
                                    ^